--- a/index.html
+++ b/index.html
@@ -30,13 +30,10 @@
               </h1>
             </div>
             <div class="face back">
-              <img
-                src="https://img.freepik.com/free-vector/sparkles-bokeh-background-with-text-space_1017-31522.jpg"
-                alt=""
-              />
+              <img src="./img/23.png" alt="" />
               <div class="information w-100">
                 <p class="">
-                  moo beef steak<br />cao trieu phat<br />10pm 31st feb 2024
+                  MOO BEEF STEAK<br />CAO TRIEU PHAT<br />10pm 31st Feb 2024
                 </p>
                 <p id="countdown"></p>
               </div>
@@ -45,7 +42,7 @@
         </div>
         <div class="flap"></div>
       </div>
-      <button class="btn fw-bold fst-italic" onclick="startAudio()">
+      <button class="btnn fw-bold fst-italic" onclick="startAudio()">
         You're Invited!
       </button>
     </div>
